--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
 # Database Configuration
-MONGODB_URL='mongodb+srv://muhammadahmaddd8:7zUqZDMYT4Wd178t@cluster0.wbudz1.mongodb.net/3DPointCloudPlatform'
+MONGODB_URL= Your Mongo URL here
 
 # JWT Configuration
-JWT_SECRET=weoriuwhfbasdfj
-JWT_EXPIRES_IN=7d
+JWT_SECRET= add your secret JWT key
+JWT_EXPIRES_IN= add date
 
 # Server Configuration
-PORT=5000
-NODE_ENV=development
+PORT= add port
+NODE_ENV= choose mode
 
 # Admin Configuration (Optional - for creating initial admin user)
-ADMIN_EMAIL=admin@example.com
-ADMIN_PASSWORD=admin123
-ADMIN_NAME=System Administrator
+ADMIN_EMAIL= add admin email
+ADMIN_PASSWORD= add admin pass word
+ADMIN_NAME=write the name of your admin
