--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,14 @@
 {
-    "version": 2,
-    "builds": [
-        {
-            "src": "index.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "index.js",
-            "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"],
-            "headers": {
-                "Access-Control-Allow-Origin": "https://3-d-point-cloud-labeling-platform-f.vercel.app",
-                "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS",
-                "Access-Control-Allow-Headers": "Content-Type, Authorization",
-                "Access-Control-Allow-Credentials": "true"
-            }
-        }
-    ],
-    "env": {
-        "NODE_ENV": "production"
-    }
+ "builds": [
+  {
+   "src": "index.js",
+   "use": "@vercel/node",
+  }
+ ],
+ "routes": [
+  {
+   "src": "/(.*)",
+   "dest": "index.js"
+  }
+ ]
 }
