Minor chnages related to hosting

--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,15 @@
 # Database Configuration
-MONGODB_URL= Your Mongo URL here
+MONGODB_URL='mongodb+srv://muhammadahmaddd8:7zUqZDMYT4Wd178t@cluster0.wbudz1.mongodb.net/3DPointCloudPlatform'
 
 # JWT Configuration
-JWT_SECRET= add your secret JWT key
-JWT_EXPIRES_IN= add date
+JWT_SECRET=weoriuwhfbasdfj
+JWT_EXPIRES_IN=7d
 
 # Server Configuration
-PORT= add port
-NODE_ENV= choose mode
+PORT=5000
+NODE_ENV=development
 
 # Admin Configuration (Optional - for creating initial admin user)
-ADMIN_EMAIL= add admin email
-ADMIN_PASSWORD= add admin pass word
-ADMIN_NAME=write the name of your admin
+ADMIN_EMAIL=admin@example.com
+ADMIN_PASSWORD=admin123
+ADMIN_NAME=System Administrator
